# SailPal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  server.sh
Applications/SailPalServer/: CMakeLists.txt  README.md
Applications/SailPalServer/src/: main.cpp
Applications/SailPalServer/src/modules/boats/: BoatsModule.cpp  BoatsModule.h  BoatsStorageAdapter.cpp  BoatsStorageAdapter.h
Applications/SailPalServer/src/modules/boats/api/: BookingManagerClient.cpp  BookingManagerClient.h
Applications/SailPalServer/src/modules/boats/res/: boats.qrc  translations.xml
Applications/SailPalServer/src/modules/boats/res/web/html/: boats.html
Applications/SailPalServer/src/modules/boats/tasks/: ApplyBoatsSettingsTask.cpp  ApplyBoatsSettingsTask.h  BoatsTask.cpp  BoatsTask.h  GetBoatOffersTask.cpp  GetBoatOffersTask.h  GetBoatTask.cpp  GetBoatTask.h  GetBoatsSettingsTask.cpp  GetBoatsSettingsTask.h  GetBoatsTask.cpp  GetBoatsTask.h  ShowBoatsTask.cpp  ShowBoatsTask.h
Applications/SailPalServer/src/platform/linux/: CxaThreadAtexitCompat.cpp
